# 0-prework-assignment

./: pyproject.toml
.ipynb_checkpoints/: Check_for_Understanding-checkpoint.ipynb
